<resources>
    <string name="app_name">Lpg Gas Leakage Detector</string>
    <string name="loading_text">Loading...</string>
    <string name="gas_increased_header">Gas Increased By</string>
    <string name="temp_increased_header">Heat Increased By</string>
    <string name="device_txt">Device </string>
    <string name="on_txt">ON</string>
    <string name="gas_level_txt">Gas Level</string>
    <string name="min_gas_level_txt">Minimum Gas Level</string>
    <string name="temperature_lvl_txt">Heat Level</string>
    <string name="min_temperature_level_txt">Minimum Heat Level</string>
    <string name="off_txt">Off</string>
    <string name="device_online_txt">Online</string>
    <string name="zero_percent_txt">0.0 %</string>
    <string name="device_info_txt">Device Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>