<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".designs.HomeScreen">

    <!-- Top text of the android app with device name-->
    <!--Device On Off button-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/device_txt"
        android:textColor="@color/black"
        android:textSize="@dimen/h2"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />
    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/device_on_off_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:checked="true"
        android:minHeight="35dp"
        android:textOff="Off"
        android:textOn="On"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showText="false" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:text="@string/device_online_txt"
        android:textColor="@color/light_green"
        android:textSize="@dimen/h5"
        app:layout_constraintEnd_toStartOf="@+id/device_on_off_switch"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="11dp"
        android:backgroundTint="@color/midnight_black"
        android:minWidth="180dp"
        android:minHeight="180dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/materialCardView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/gas_increased_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:indeterminate="true"
            app:indicatorColor="@color/white"
            app:indicatorSize="70dp"
            app:trackColor="@color/middle_grey"
            app:trackCornerRadius="15dp"
            app:trackThickness="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="110dp"
            android:text="@string/gas_increased_header"
            android:textColor="@color/middle_white"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/gas_increased_percentage_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="130dp"
            android:text="@string/zero_percent_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/h2"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <!--    Temperature material card view-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="13dp"
        android:backgroundTint="@color/dark_red"
        android:minWidth="180dp"
        android:minHeight="180dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/temp_increased_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:indeterminate="true"
            app:indicatorColor="@color/white"
            app:indicatorSize="70dp"
            app:trackColor="@color/middle_grey"
            app:trackCornerRadius="15dp"
            app:trackThickness="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="110dp"
            android:text="@string/temp_increased_header"
            android:textColor="@color/middle_white"
            android:textSize="@dimen/h5" />

        <TextView
            android:id="@+id/temp_increased_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="130dp"
            android:text="@string/zero_percent_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/h2"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="292dp"
        android:text="@string/device_info_txt"
        android:textColor="@color/black"
        android:textSize="@dimen/h3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/dark_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">
<!--        Gas Level-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingVertical="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/smoke_icon_24"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/gas_level_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/h5" />

            <TextView
                android:id="@+id/gas_level_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="595"
                android:textColor="@color/black"
                android:textSize="@dimen/h5"
                android:textStyle="bold"
                android:gravity="right|end"/>
        </TableRow>
<!--        Minimum gas level-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingVertical="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/minimum_icon"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/min_gas_level_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/h5" />

            <TextView
                android:id="@+id/min_gas_level_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="595"
                android:textColor="@color/black"
                android:textSize="@dimen/h5"
                android:textStyle="bold"
                android:gravity="right|end"/>
        </TableRow>
<!--        Temperature level-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingVertical="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/tempurature_icon_24"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/temperature_lvl_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/h5" />

            <TextView
                android:id="@+id/temperature_level_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="595"
                android:textColor="@color/black"
                android:textSize="@dimen/h5"
                android:textStyle="bold"
                android:gravity="right|end"/>
        </TableRow>
<!--        Minimum Temperature level-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingVertical="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/smoke_icon_24"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/min_temperature_level_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/h5" />

            <TextView
                android:id="@+id/min_temp_level_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="595"
                android:textColor="@color/black"
                android:textSize="@dimen/h5"
                android:textStyle="bold"
                android:gravity="right|end"/>
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>